--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.2
+  qr_code_scanner: ^0.6.1
+  flutter_svg: ^1.0.3
+  flutter_svg_provider: ^1.0.2
 
 dev_dependencies:
   flutter_test:
