--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   qr_code_scanner: ^0.6.1
   flutter_svg: ^1.0.3
   flutter_svg_provider: ^1.0.2
+  dio: ^4.0.4
 
 dev_dependencies:
   flutter_test:
