--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_svg: ^1.0.3
   flutter_svg_provider: ^1.0.2
   dio: ^4.0.4
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
