--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_svg_provider: ^1.0.2
   dio: ^4.0.4
   shared_preferences: ^2.0.13
+  flushbar: ^1.10.4
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
