--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,17 @@ dependencies:
   shared_preferences: ^2.0.13
   flushbar: ^1.10.4
   fluttertoast: ^8.0.9
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  #  image_path: "assets/images/icon-128x128.png"
+  image_path_android: "assets/Images/NewLogo720x720.png"
+  image_path_ios: "assets/Images/NewLogo720x720.png"
+  android: true # can specify file name here e.g. "ic_launcher"
+  ios: true # can specify file name here e.g. "My-Launcher-Icon"
+  adaptive_icon_background: "assets/Images/backgroundbranco.png" # only available for Android 8.0 devices and above
+  adaptive_icon_foreground: "assets/Images/onlylogo.png" # only available for Android 8.0 devices and above
+
 
 dev_dependencies:
   flutter_test:
